--- a/pages/video-player/index.html
+++ b/pages/video-player/index.html
@@ -7,14 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JSExpert Max - BlinkToPlay</title>
   <style>
+    body {
+      background-color: #202020fd;
+    }
     video {
       width: 95%;
       margin: 10px;
+      border-radius: 15px;
     }
     button {
       margin: 10px;
       padding: 10px 16px;
-      background-color: #2a2286;
+      background-color: #d3243b;
       color: #fff;
       border: 0;
       border-radius: 4px;
@@ -24,8 +28,11 @@
       margin-left: 20px;
     }
     button:disabled {
-      background-color: #2a228640;
+      background-color: #c5132b25;
       cursor: not-allowed;
+    }
+    #status {
+      color: #fff;
     }
   </style>
 </head>
